<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context="br.com.joao.alfabetolibraskids.Activity_03"
    android:background="@color/material_deep_teal_200">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoActivity_03_01"
        android:id="@+id/textView31"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:id="@+id/imageView301"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="10dp"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:id="@+id/imageView302"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="50dp"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:id="@+id/imageView303"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="90dp"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:id="@+id/imageView304"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="130dp"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:id="@+id/imageView305"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="170dp"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:id="@+id/imageView306"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="210dp"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:id="@+id/imageView307"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="250dp"
        />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoActivity_03_02"
            android:layout_alignParentTop="true"
            android:layout_marginTop="140dp"
            android:layout_marginLeft="0dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/imageView308"
            android:layout_alignParentTop="true"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="55dp"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/imageView309"
            android:layout_alignParentTop="true"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="95dp"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/imageView310"
            android:layout_alignParentTop="true"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="135dp"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/imageView311"
            android:layout_alignParentTop="true"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="175dp"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/imageView312"
            android:layout_alignParentTop="true"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="215dp"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/imageView313"
            android:layout_alignParentTop="true"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="255dp"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/imageView314"
            android:layout_alignParentTop="true"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="295dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="Q"
        android:id="@+id/buttonQ"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="0dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="W"
        android:id="@+id/buttonW"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="31dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="E"
        android:id="@+id/buttonE"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="62dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="R"
        android:id="@+id/buttonR"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="93dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="T"
        android:id="@+id/buttonT"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="124dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="Y"
        android:id="@+id/buttonY"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="155dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="U"
        android:id="@+id/buttonU"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="186dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="I"
        android:id="@+id/buttonI"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="217dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="O"
        android:id="@+id/buttonO"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="248dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="P"
        android:id="@+id/buttonP"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="279dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="A"
        android:id="@+id/buttonA"
        android:layout_alignParentTop="true"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="10dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="S"
        android:id="@+id/buttonS"
        android:layout_alignParentTop="true"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="42dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="D"
        android:id="@+id/buttonD"
        android:layout_alignParentTop="true"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="74dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="F"
        android:id="@+id/buttonF"
        android:layout_alignParentTop="true"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="106dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="G"
        android:id="@+id/buttonG"
        android:layout_alignParentTop="true"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="138dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="H"
        android:id="@+id/buttonH"
        android:layout_alignParentTop="true"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="170dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="J"
        android:id="@+id/buttonJ"
        android:layout_alignParentTop="true"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="202dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="K"
        android:id="@+id/buttonK"
        android:layout_alignParentTop="true"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="234dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="L"
        android:id="@+id/buttonL"
        android:layout_alignParentTop="true"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="266dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="Z"
        android:id="@+id/buttonZ"
        android:layout_alignParentTop="true"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="42dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="X"
        android:id="@+id/buttonX"
        android:layout_alignParentTop="true"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="74dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="C"
        android:id="@+id/buttonC"
        android:layout_alignParentTop="true"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="106dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="V"
        android:id="@+id/buttonV"
        android:layout_alignParentTop="true"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="138dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="B"
        android:id="@+id/buttonB"
        android:layout_alignParentTop="true"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="170dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="N"
        android:id="@+id/buttonN"
        android:layout_alignParentTop="true"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="202dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:text="M"
        android:id="@+id/buttonM"
        android:layout_alignParentTop="true"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="234dp"
        android:textSize="30dp"
        android:background="@android:color/holo_purple" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/textoActivity_03_03"
        android:id="@+id/button31"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="405dp"
        android:textSize="25dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/background_light" />

    </RelativeLayout>

</RelativeLayout>
